# imageless

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  SPEC.md  flake.nix
.github/workflows/: ci.yml
crates/imageless/: Cargo.toml
crates/imageless-resolver/: Cargo.toml
crates/imageless-resolver/src/: dev_resolver.rs  resolver.rs
crates/imageless-resolver/tests/: integration.rs
crates/imageless-runc/: Cargo.toml
crates/imageless-runc/src/: main.rs
crates/imageless-runc/tests/: docker-embedded-e2e.sh  docker-embedded-isolated-e2e.sh  stock-runc.sh
crates/imageless/src/: bundle.rs  client.rs  gc.rs  lib.rs  materialize.rs  mounts.rs  nix.rs  release.rs  resolver.rs  spec.rs
dev/docker/: README.md  daemon.json  policy.json
examples/: containerd-config-v2.toml  containerd-config.toml  dev-policy.json  pod-imageless.yaml  runtimeclass.yaml
examples/nginx-embedded/: flake.nix
nix/: module.nix  package.nix  release-catalog.nix
smoke/: imageless-cri-smoke.sh
