[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["dmadisetti"]
license = "Apache-2.0"
repository = "https://github.com/dmadisetti/imageless"
homepage = "https://imageless.run"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
