[package]
name = "imageless"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Materialize a Nix flake carried in OCI image layers into the container rootfs at create time"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
ureq = { version = "=3.3.0", default-features = false, features = ["rustls"] }

[dev-dependencies]
oci-spec = "0.7"
